--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    @apply bg-[#09090A] text-zinc-100;
+}
+
 /* pode-se trabalhar criando classes */
 /* 
 .button {
